[tool.poetry]
name = "jaq-alkasm"
packages = [
    {include = "jaq"}
]
version = "1.2.0"
description = "Extensions for multithreaded Python applications."
authors = ["Alexander Reynolds <alex@theory.shop>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alkasm/jaq"
include = ["py.typed"]

[tool.poetry.dependencies]
python = "^3.6"
sphinx-copybutton = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
mypy = "^0.812"
black = "^20.8b1"
Sphinx = "^3.5.3"
furo = "^2021.3.20-beta.31"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
