[tool.poetry]
name = "theta-alkasm"
packages = [
    {include = "theta"}
]
version = "1.2.0"
description = "Extensions for multithreaded Python applications."
authors = ["Alexander Reynolds <alex@theory.shop>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alkasm/theta"
include = ["py.typed"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.0"
black = "^23.9.1"
sphinx = "^7.2.6"
furo = "^2023.9.10"
sphinx-copybutton = "^0.5.2"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
