[tool.poetry]
name = "theta-alkasm"
packages = [
    {include = "theta"}
]
version = "1.2.0"
description = "Extensions for multithreaded Python applications."
authors = ["Alexander Reynolds <alex@theory.shop>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alkasm/theta"
include = ["py.typed"]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.group.dev.dependencies]
mypy = "*"
black = "*"
sphinx = "*"
furo = "*"
sphinx-copybutton = "*"
pytest = "*"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
